--- a/taillife/package.json
+++ b/taillife/package.json
@@ -23,6 +23,7 @@
     "react-youtube": "^10.1.0",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
+    "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
