--- a/netflex/package.json
+++ b/netflex/package.json
@@ -25,6 +25,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-youtube": "^10.1.0",
     "styled-components": "^6.1.11",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
